product_docs/docs/net_connector/4.0.10.1/03_the_advanced_server_net_connector_overview.mdx
---
title: "The Advanced Server .NET Connector - Overview"
---

<div id="the_advanced_server_net_connector_overview" class="registered_link"></div>


The Advanced Server .NET Connector is a .NET data provider that allows a client application to connect to a database stored on an Advanced Server host. The .NET Connector accesses the data directly, allowing the client application optimal performance, a broad spectrum of functionality, and access to Advanced Server features.

The .NET Connector supports .NET Framework versions 4.0 and 4.5.1, and Entity Framework 5/6, and .Net Standard 2.0.

## The .NET Class Hierarchy



The .NET Class Hierarchy contains a number of classes that you can use to create objects that control a connection to the Advanced Server database and manipulate the data stored on the server. The following are just a few of the most commonly used object classes:

`EDBConnection`

> The `EDBConnection` class represents a connection to Advanced Server. An `EDBConnection` object contains a `ConnectionString` that instructs the .NET client how to connect to an Advanced Server database.

`EDBCommand`

> An `EDBCommand` object contains an SQL command that the client will execute against Advanced Server. Before you can execute an `EDBCommand` object, you must link it to an `EDBConnection` object.

`EDBDataReader`

> An `EDBDataReader` object provides a way to read an Advanced Server result set. You can use an `EDBDataReader` object to step through one row at a time, forward-only.

`EDBDataAdapter`

> An `EDBDataAdapter` object links a result set to the Advanced Server database. You can modify values and use the `EDBDataAdapter` class to update the data stored in an Advanced Server database.
